common-applications/control/api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: osinfra-api
  name: osinfra-api
